--- a/src/app/add-skills/add-skills.component.html
+++ b/src/app/add-skills/add-skills.component.html
@@ -15,13 +15,13 @@
              <div class="uk-margin">
                <span style="color: white;">Categorie: </span> <select class="uk-select" name="categorie" [(ngModel)]="data.categorie">
                      <option>Devloppement web</option>
+                     <option>Devloppement mobile</option>
                      <option>Design logo</option>
                      <option>Devloppement Desktop</option>
                      <option>SEO</option>
                      <option>Design banner</option>
-     
-     
-     
+                     <option>Cuisine</option>
+                     <option>Translate</option>
                  </select>
              </div>
              <div class="uk-margin" style="color: white;">
