--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,86 +2,27 @@
 
 
 <!--<img src="assets/img/freelance.jpg" style="width: 100%;" alt="Responsive image">-->
-<div uk-slideshow="animation: push">
-
-    <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
-
-        <ul class="uk-slideshow-items">
-            <li>
-                <img src="assets/img/lance1.jpg" alt="" uk-cover>
-            </li>
-            <li>
-                <img src="assets/img/lance2.jpg" alt="" uk-cover>
-            </li>
-            <li>
-                <img src="assets/img/lance3.jfif" alt="" uk-cover>
-            </li>
-        </ul>
-
-        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
-        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
-
-    </div>
-
-    <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-margin"></ul>
-
-</div>
 
 <main role="main">
-
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption text-left">
-              <h1>Example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption text-right">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
-
-    <!-- Marketing messaging and featurettes
-    ================================================== -->
+    <!-- Marketing messaging and featurettes-->
+    <br>
+   <div style="background-color:#204838; width: 100%; height: 350px;">
+    <br>
+    <h1 class="display-3" style="text-align:center ; color: white; font-family: monospace;">1 Million Arab Programmers</h1>
+    <br>
+    <h1 class="lead" style="text-align:center ; color:white; font-size: 30px;
+    font-family: monospace;">Don't Know Where To Start ?</h1>
+    <div style=" margin-left: 50%; margin-right: 50%; position: relative;">
+    <button style="background-color: #62ad8f; width: 223px; border-radius: 5px; color: white;
+    font-size: 33px; border: none; cursor: pointer;"
+     routerLink="/register">Start Now!</button></div>
+  <br> 
+  </div>
+   <br>
+   <br>
     <!-- Wrap the rest of the page in another container to center all the content. -->
-
+    <br>
+    <br>
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
@@ -90,19 +31,19 @@
           <img class="rounded-circle" src="assets/img/sec1.jpg" style="width: 150px; height: 150px;" alt="Generic placeholder image" width="140" height="140">
           <h2 style="color: white;">RECHERCHE DE COMPÉTENCES</h2>
           <p style="color: white;">Nous prenons en charge la recherche et la sélection des experts indépendants les plus pertinents pour répondre à votre cahier des charges et mener à bien vos projets.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="#" role="button" style="background: #204838;border: none;">View details</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="rounded-circle" src="assets/img/sec2.png" style="width: 150px; height: 150px;" alt="Generic placeholder image" width="140" height="140">
           <h2 style="color: white;">PORTAGE SALARIAL D’INDÉPENDANTS</h2>
           <p style="color: white;">Le portage salarial permet aux entreprises d’adapter facilement leurs effectifs aux besoins. Vous pouvez ainsi collaborer avec les meilleurs experts du marché, sans surcharge administrative ni gestion supplémentaire.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="#" role="button"style="background: #204838;border: none;">View details </a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="rounded-circle" src="assets/img/sec3.jpg" style="width: 150px; height: 150px;" alt="Generic placeholder image" width="140" height="140">
           <h2 style="color: white;">SOUS-TRAITANCE DE SOCIÉTÉS</h2>
           <p style="color: white;">Nous assurons la gestion et la sécurisation de vos sous-traitants non stratégiques afin que vous bénéficiiez des meilleures compétences et savoir-faire, sans surcharge administrative.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="#" role="button" style="background: #204838;border: none;">View details</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
@@ -113,7 +54,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading" style="color: white;">Bienvenue dans l'entreprise étendue <span class="text-muted" style="color: white;">Ça va vous couper le souffle.</span></h2>
+          <h2 class="featurette-heading" style="color: white;">Bienvenue dans l'entreprise étendue <p  style="color: #204838;">Ça va vous couper le souffle.</p></h2>
           <p class="lead" style="color: white;">Les modèles traditionnels de travail sont de moins en moins adaptés aux besoins de réactivité et de flexibilité des entreprises. La solution ? Créer un écosystème de ressources externes pour s’associer des compétences spécifiques non disponibles en interne.</p>
         </div>
         <div class="col-md-5">
@@ -125,7 +66,7 @@
 
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading" style="color: white;">VOTRE PLATEFORME <span class="text-muted" style="color: white;">Voir par vous-même.</span></h2>
+          <h2 class="featurette-heading" style="color: white;">VOTRE PLATEFORME <p  style="color: #204838;">Voir par vous-même.</p></h2>
           <p class="lead" style="color: white;">Chercher de nouveaux talents, faire une demande de portage salarial, avoir une visibilité sur vos intervenants, gérer les bons de commande et factures… Visualisez et pilotez simplement les activités liées à vos ressources externes.</p>
         </div>
         <div class="col-md-5 order-md-1">
@@ -137,7 +78,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading" style="color: white;">Qui sommes-nous ? <span class="text-muted" style="color: white;">Nous ??</span></h2>
+          <h2 class="featurette-heading" style="color: white;">Qui sommes-nous ? <p  style="color: #204838;">Nous ??</p></h2>
           <p class="lead" style="color: white;">Leader tunisien de l’intermédiation entre entreprises et prestataires intellectuels, nous aidons nos clients au quotidien à structurer et sécuriser leur collaboration avec les travailleurs indépendants.</p>
         </div>
         <div class="col-md-5">
