--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
             <input class="uk-input" ngModel type="password" #password="ngModel" name="password">
         </div>
     </div>
-    
+    <div uk-spinner *ngIf="spinner"></div>
     <div class="alert alert-danger" role="alert" *ngIf="valid">
         Error password
 </div>
