--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,6 +1,6 @@
 
-<div class="body">
-<div class="row">
+<div class="body" style="background-color: #204838; height: 1000px;">
+    <div class="row" >
     <div *ngFor="let item of itemArray">
     <div class="col col-12 col-md-6 col-lg-3 item_all" *ngIf="item.uid===uId" >
         <div class="card" style="width: 18rem; background-color: #204838;" >
